--- a/src/main/resources/templates/schedule/schedulemain.html
+++ b/src/main/resources/templates/schedule/schedulemain.html
@@ -24,7 +24,7 @@
             position:absolute;
             z-index:10;
             border:1px solid black;
-            width:19%;
+            width:14%;
             background-color: #00aeff;
         }
 
@@ -39,7 +39,7 @@
         }
 
         .schedule-header-form .month {
-            width: 18%;
+            width: 14%;
         }
 
         .schedule-content-form th {
@@ -51,7 +51,7 @@
         .schedule-content-form td {
             padding: 0;
             margin: 0;
-            width: 18%;
+            width: 14%;
         }
         .schedule-content-form .time {
             height:50px;
@@ -416,8 +416,8 @@
             max.set("dayid", $('#dayid').text());
             list.push(max);
             var con = $('#coursenum').text().slice(0,-1);
-            var str = "<div name=" + $('#dayid').text() + " id=" + $('#coursenum').text() +"  class='mysubject' onClick='removeByID("+con+")' style='" +"cursor:pointer;position:absolute;z-index:10;border:1px solid black;width:19%;background-color:"+$('#colornum').text()+
-                ";top:"+$('#topnum').text() +"px;"+"height:"+$('#heightnum').text()+"px;'>"+$('#title').text() +$('#part').text()  +$('#profname').text()+$('#placename').text()+"</div>";
+            var str = "<div name=" + $('#dayid').text() + " id=" + $('#coursenum').text() +"  class='mysubject' onClick='removeByID("+con+")' style='" +"cursor:pointer;position:absolute;z-index:10;border:1px;width:17%;background-color:"+$('#colornum').text()+
+                ";top:"+$('#topnum').text() +"px;"+"height:"+$('#heightnum').text()+"px;bordercolor:rgba(213, 213, 213, 0.5);'>"+$('#title').text() +" "+$('#part').text() +"<br>"+$('#profname').text()+" "+$('#placename').text()+"</div>";
 
             var distinguish ='#'+$('#dayid').text();
             $(distinguish).append(str);
