--- a/src/main/resources/templates/search/searchMatchingList.html
+++ b/src/main/resources/templates/search/searchMatchingList.html
@@ -98,7 +98,7 @@
               </div>
               <!-- 검색어 입력창 -->
               <div class="search-input-wrap fl">
-                <input id="searchBox" class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요">
+                <input id="searchBox" class="form-control mr-sm-2" maxlength = "100" onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요">
               </div>
               <button class="btn glass"><img th:src="@{/images/돋보기.png}" onClick="return searchMatching()" class="button-image"></button>
           </div>
