--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -61,7 +61,8 @@
 			<li>
 				<form class="input-group" onsubmit="return false;">
 					<input id="totalSearchBox" class="form-control" maxlength = "100" onKeypress = "if(event.keyCode==13) {return searchTotal()}" type="search" placeholder="검색어를 입력해 주세요" aria-label="Search" style="border-radius: 5px; border: 2px solid #4a57a8;">
-					<img th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchTotal()">
+					<img th:if="${session.studentInfo} == null" th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button">
+					<img th:unless="${session.studentInfo} == null" th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchTotal()">
 				</form>
 			</li>
 			<li th:if="${session.studentInfo} == null">
@@ -78,14 +79,16 @@
 				</form>
 			</li>
 			<li th:unless="${session.studentInfo} == null">
-				<form class="form-signin" style="margin:auto;">
-					<img th:if="${session.folderName} != null" style="width:70px;height:90px;" th:src="@{/images/profiles/} + ${session.folderName} + '/'  + 'profileImage.png'" class="card-img">
-					<img th:unless="${session.folderName} != null" style="width:70px;height:90px;" src="http://placehold.it/70x90/" class="card-img">
-					<div style="color: white">[[${session.studentInfo.getNickname()}]] 님 환영합니다!!!</div>
-					<button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
-					<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
-				</form>
-			</li>
+                <form class="form-signin" style="margin:auto;">
+                    <div style="display: inline-flex;">
+                    	<img th:if="${session.folderName} != null" style="width:70px;height:90px;" th:src="@{/images/profiles/} + ${session.folderName} + '/'  + 'profileImage.png'">
+                    	<img th:unless="${session.folderName} != null" style="width:70px;height:90px;" src="http://placehold.it/70x90/">
+                        <div style="text-align: center; width:100%; padding-top:15px; color: white;">[[${session.studentInfo.getNickname()}]] 님 <br>환영합니다!!!</div>
+                    </div>
+                    <button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
+                    <button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
+                </form>
+            </li>
 		</ul>
 	</div>
 </nav>
@@ -119,7 +122,8 @@
 				</select>
 			</div>
 				<input id="totalSearchBox" class="form-control" maxlength = "100" onKeypress = "if(event.keyCode==13) {return searchTotal()}" type="search" placeholder="검색어를 입력해 주세요" aria-label="Search" style="border-radius: 5px; border: 2px solid #4a57a8;">
-				<img th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchTotal()">
+				<img th:if="${session.studentInfo} == null" th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button">
+				<img th:unless="${session.studentInfo} == null" th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchTotal()">
 			</form>
 		</div>
 	</div>
@@ -136,12 +140,14 @@
 			</button>
 		</form>
 		<form th:unless="${session.studentInfo} == null" class="form-signin" style="margin:auto;">
-			<img th:if="${session.folderName} != null" style="height:90px;width:25%; " th:src="@{/images/profiles/} + ${session.folderName} + '/'  + 'profileImage.png'" class="card-img">
-			<img th:unless="${session.folderName} != null" style="height:90px; width:25%;" src="http://placehold.it/70x90/" class="card-img">
-			[[${session.studentInfo.getNickname()}]] 님 환영합니다!!!
-			<button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
-			<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
-		</form>
+            <div style="display: inline-flex;">
+            	<img th:if="${session.folderName} != null" style="height:90px;width:25%; " th:src="@{/images/profiles/} + ${session.folderName} + '/'  + 'profileImage.png'">
+            	<img th:unless="${session.folderName} != null" style="height:90px; width:25%;" src="http://placehold.it/70x90/">
+                <div style="text-align: center; width:100%; padding-top:15px;">[[${session.studentInfo.getNickname()}]] 님 <br>환영합니다!!!</div>
+            </div>
+            <button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
+            <button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
+        </form>
 	</div>
 </div>
 
@@ -251,7 +257,6 @@
 				chgText + "&date=" + date.val() + "&type=" + type.val() + "&option=" + option.val();
 	}
 </script>
-
 </th:block>
 <th:block layout:fragment="script"></th:block>
 </body>
