--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -143,9 +143,21 @@
             </thead>
             <tbody>
             <tr th:each="word, num: ${searchRankingList}" th:if="${num.count} < 7">
-              <th scope="row">[[${num.count}]] [[${word.getWord()}]]
-               <b th:if="${word.getRankingchange()} == 20">NEW</b>
-               <b th:unless="${word.getRankingchange()} == 20">[[${word.getRankingchange()}]]</b>
+              <th scope="row">
+              	<div class="ranking-num-wrap">
+                  <span class="ranking-num">[[${num.count}]]</span>
+                </div>
+                <div class="ranking-word-wrap">
+                  <span class="ranking-word">[[${word.getWord()}]]</span>
+                </div>
+                <div class="ranking-change-wrap" th:switch="${word.getRankingchange()}">
+                  <b class="ranking-change ranking-change-new" th:case="20">NEW</b>
+                  <b class="ranking-change ranking-change-old" th:case="0">-</b>
+                  <div class="ranking-change" th:case="*">
+                    <b class="ranking-change" th:if="${word.getRankingchange()} > 0"><img class="ranking-img" th:src="@{/images/rankingup.png}">[[${word.getRankingchange()}]]</b>
+                    <b class="ranking-change" th:unless="${word.getRankingchange()} > 0"><img class="ranking-img" th:src="@{/images/rankingdown.png}">[[${-word.getRankingchange()}]]</b>
+                  </div>
+               </div>
               </th>
             </tr>
             <tr th:if="${searchRankingList.size()} == 0">
