--- a/src/main/resources/templates/lectureevaluation/lectureEvaluationList.html
+++ b/src/main/resources/templates/lectureevaluation/lectureEvaluationList.html
@@ -1,119 +1,147 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
-
 <th:block layout:fragment="title">
-  <title>YU LectureEvaluation List</title>
+    <title>YU 강의평 전체보기</title>
 </th:block>
 
 <th:block layout:fragment="article">
-  <div id="article">
-      <div class="container-fluid">
-        <div class="card bg-light mt-3">
-          <div class="card-header bg-light">
-            <h2>수강중인 과목</h2><br><button th:if="${lectureList.size()}==0" id="lectureInsert" type="button" class="lecture-update-btn btn-blue" onClick="lectureInsert()">과목 불러오기</button>
-          </div>
-          <div class="card-header bg-light" th:each="lecture :${lectureList}">
-            <div class="row">
-              <div class="col-8 text-left">
-                <span th:text="${lecture.getLecturenum()}"></span> /
-                <span th:text="${lecture.getLecturename()}"></span> /
-                <small th:text="${lecture.getProfessor()}">   </small>
-                <button th:if="${lecture.getCheck_evaluation()}=='F'" id="lectureUpdate" type="button" class="btn-blue" th:onClick="|lectureEval(${lecture.getLno()})|">평가하기</button>
-              </div>
+        <div class="container-fluid">
+            <div class="col-sm-auto article-header">
+                <h2>강의평 전체보기</h2>
             </div>
-          </div>
-        </div>
-        <br>
-        <div class="card bg-light mt-3">
-          <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs">
-              <li class="nav-item"><a class="nav-link active" href="#home" data-toggle="tab">최근 강의평</a></li>
-            </ul>
-          </div>
-          <div class="tab-content">
-            <div class="tab-pane active" id="home">
-              <div class="card-header bg-light" th:each="lectureEvaluation: ${lectureEvaluationList} ">
-                <div class="row">
-                  <div class="col-8 text-left">
-                    <a href="#" th:text="${lectureEvaluation.getLecturename()}"></a>
-                    <th:block th:each="num:${#numbers.sequence(1,5)}">
-                      <span th:if="${lectureEvaluation.getStar()}>=${num}">★</span>
-                      <span th:unless="${lectureEvaluation.getStar()}>=${num}">☆</span>
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">과목이름</th>
+                            <th scope="col">별점</th>
+                            <th scope="col">교수이름</th>
+                            <th scope="col">등록날짜</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <th:block th:each="lectureEvaluation,num :${lectureList}">
+                        <tr class="accordion-toggle collapsed" th:id="'accordion'+${num.count}" data-toggle="collapse" th:data-parent="'#accordion'+${num.count}"  th:href="'#collapse'+${num.count}">
+                            <td class="expand-button" th:text="${lectureEvaluation.getLecturename()}"></td>
+                            <td>
+                                <th:block th:each="num:${#numbers.sequence(1,5)}">
+                                    <span th:if="${lectureEvaluation.getStar()}>=${num}">★</span>
+                                    <span th:unless="${lectureEvaluation.getStar()}>=${num}">☆</span>
+                                </th:block>
+                            </td>
+                        <td th:text="${lectureEvaluation.getProfessor()}"></td>
+                        <td th:text="${lectureEvaluation.getRegister_date()}"></td>
+                        </tr>
+                        <tr class="hide-table-padding">
+                            <td colspan="1">
+                                <div th:id="'collapse'+${num.count}" class="collapse in p-3">
+                                    강의평
+                                </div>
+                            </td>
+                            <td colspan="2">
+                                <div th:id="'collapse'+${num.count}" class="collapse in p-3" th:text="${lectureEvaluation.getContent()}">
+                                </div>
+                            </td>
+                        </tr>
                     </th:block>
-                    /<small th:text=" ${lectureEvaluation.getProfessor()}"></small>
-                    /<span th:text=" ${lectureEvaluation.getRegister_date()}"></span>
-                  </div>
+                    </tbody>
+                </table>
+            </div>
+            <hr style="margin:0"/><br>
+
+
+            <div class="clear">
+                <div class="float-right">
+                    Total <b style="color:red">[[${lectureList.getTotalPages()}]]</b> Pages / <b style="color:red">[[${lectureList.getTotalElements()}]]</b> Elements
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
 
-        <!--여기까지-->
-        <div class="search-wrap1 clear">
-          <!-- 옵션 -->
-          <form class="input-group" onsubmit="return false;">
-            <div class="search-option-wrap fl">
-              <select id="searchDate" class="search-date">
-                <option value="all">전체기간</option>
-                <option value="1week">1주</option>
-                <option value="1month">1개월</option>
-                <option value="6month">6개월</option>
-              </select>
-              <select id="searchOption" class="search-option">
-                <option value="title">강의명</option>
-                <option value="professor">교수명</option>
-                <option value="content">내용</option>
-                <option value="writer">글작성자</option>
-              </select>
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    <li id="pagefirst">
+                        <a th:href=" '?page=0'">
+                            <span class="page-link">«</span>
+                        </a>
+                    </li>
+                    <li style="cursor:pointer" id="pagePrev" class="page-item disabled">
+                        <a th:onClick="|return pageMove('prev');|">
+                            <span class="page-link">&lt;</span>
+                        </a>
+                    </li>
+                    <li class="page-item" style="cursor:pointer" th:if="${lectureList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,lectureList.getTotalPages()-1)}">
+                        <a th:if="${lectureList.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?page=' + ${num}" th:text="${num+1}"></a>
+                        <a th:unless="${lectureList.getNumber()} == ${num}" class="page-link" th:href="'?page=' + ${num}" th:text="${num+1}"></a>
+                    </li>
+                    <li id="pageNext">
+                        <a style="cursor:pointer" th:onClick="|return pageMove('next');|">
+                            <span class="page-link">&gt;</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a th:if="${lectureList.getTotalPages()}>0" th:href=" '?page=' + ${lectureList.getTotalPages()-1}">
+                            <span class="page-link">»</span>
+                        </a>
+                        <a th:if="${lectureList.getTotalPages()}==0" th:href="'?page=' + ${lectureList.getTotalPages()}">
+                            <span class="page-link">»</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="search-wrap1 clear">
+                <!-- 옵션 -->
+                <form class="input-group" onsubmit="return false;">
+                    <div class="search-option-wrap fl">
+                        <select id="searchDate" class="search-date">
+                            <option value="all">전체기간</option>
+                            <option value="1week">1주</option>
+                            <option value="1month">1개월</option>
+                            <option value="6month">6개월</option>
+                        </select>
+                        <select id="searchOption" class="search-option">
+                            <option value="title">강의명</option>
+                            <option value="professor">교수명</option>
+                            <option value="content">내용</option>
+                            <option value="writer">글작성자</option>
+                        </select>
+                    </div>
+                    <!-- 검색어 입력창 -->
+                    <input id="searchBox" class="form-control " onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요"  style="border-radius: 5px; border: 2px solid #4a57a8;">
+                    <img th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchMatching()">
+                    </form>
+                </div>
             </div>
-            <!-- 검색어 입력창 -->
-            <input id="searchBox" class="form-control " onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요"  style="border-radius: 5px; border: 2px solid #4a57a8;">
-            <img th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchMatching()">
-          </form>
-        </div>
-      </div>
-  </div>
 </th:block>
+
 <th:block layout:fragment="script">
-  <script>
-    function lectureEval(lno){
-      location.href = "/yu/lectureevaluation/EvalLecture?lno=" + lno;
-    }
-    function lectureInsert(){
-      $('#lectureInsert').hide();
-      alert("4~8초 정도 기다려주세요.");
-      $.ajax({
-        type: "POST",
-        url: "/yu/lecture/insertLecture",
-        success: function (data) {
-          if (data) {
-            alert("불러오기 성공");
-            location.href = location.href;
-          } else
-            alert("불러오기 실패");
-        }, error: function () {
-          alert("불러오기 실패");
-          return false;
+    <script>
+        var pages = getParameterByName("page");
+
+        if(pages == "") {
+            pages=0;
         }
-      });
-      return false;
-    }
-    $('a[data-toggle="tab"]').click(function(e) {
-      e.preventDefault();
-      $(this).tab('show');
-    });
+        $("#page"+pages).attr("class","active");
 
-    $('a[data-toggle="tab"]').on("shown.bs.tab", function(e) {
-      var id = $(e.target).attr("href");
-      localStorage.setItem('selectedTab', id)
-    });
+        function getParameterByName(name) {
+            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+                results = regex.exec(location.search);
+            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+        }
 
-    var selectedTab = localStorage.getItem('selectedTab');
-    if (selectedTab != null) {
-      $('a[data-toggle="tab"][href="' + selectedTab + '"]').tab('show');
-    }
-  </script>
+        function pageMove(param) {
+            var pageNum = parseInt(getParameterByName("page"));
+            var nextOrPrev;
+            if(isNaN(pageNum)) pageNum = 0;
+            nextOrPrev = (param == "next") ? 1 : -1;
+
+            if(pageNum + nextOrPrev < 0) return false;
+            else if(pageNum + nextOrPrev > [[${lectureList.getTotalPages()}]] - 1) return false;
+
+            location.href = "?page=" + (pageNum + nextOrPrev);
+            return true;
+        }
+    </script>
 </th:block>
 </html>
