--- a/src/main/resources/templates/search/searchBoardList.html
+++ b/src/main/resources/templates/search/searchBoardList.html
@@ -9,7 +9,7 @@
     <div id="article">
       <div class="container-fluid">
         <div class="col-sm-auto article-header">
-          <h2 style="color:red" th:text=${boardtype}></h2>
+          <h2 style="color:#ff0000" th:text=${boardtype}></h2>
         </div>
         <table class="col-sm-auto table table-hover" style="margin:0">
           <thead>
