--- a/src/main/resources/templates/search/searchLectureEvaluationList.html
+++ b/src/main/resources/templates/search/searchLectureEvaluationList.html
@@ -2,13 +2,13 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
 <th:block layout:fragment="title">
-    <title>YU 강의평 전체보기</title>
+    <title>YU LectureEvaluation List</title>
 </th:block>
 
 <th:block layout:fragment="article">
         <div class="container-fluid">
             <div class="col-sm-auto article-header">
-                <h2>강의평 전체보기</h2>
+                <h2 style="color:red">강의평가 [검색 결과]</h2>
             </div>
             <div class="table-responsive">
                 <table class="table table-hover">
@@ -23,7 +23,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <th:block th:each="lectureEvaluation,num :${lectureList}">
+                    <th:block th:each="lectureEvaluation,num :${lectureEvaluationList}">
                         <tr class="accordion-toggle collapsed" th:id="'accordion'+${num.count}" data-toggle="collapse" th:data-parent="'#accordion'+${num.count}"  th:href="'#collapse'+${num.count}">
                             <td class="expand-button" th:text="${lectureEvaluation.getLecturename()}"></td>
                             <td>
@@ -32,14 +32,14 @@
                                     <span th:unless="${lectureEvaluation.getStar()}>=${num}">☆</span>
                                 </th:block>
                             </td>
-                            <td th:text="${lectureEvaluation.getProfessor()}"></td>
-                            <td th:text="${lectureEvaluation.getNickname()}"></td>
-                            <td th:text="${lectureEvaluation.getRegister_date()}"></td>
-                            <td>
-                                <div class="declare-btn-form fl">
-                                    <button type="button" class="btn-declare"><img th:src="@{/images/declare_btn.png}" class="declare-btn"></button>
-                                </div>
-                            </td>
+                        <td th:text="${lectureEvaluation.getProfessor()}"></td>
+                        <td th:text="${lectureEvaluation.getNickname()}"></td>
+                        <td th:text="${lectureEvaluation.getRegister_date()}"></td>
+                       <td>
+                       		<div class="declare-btn-form fl">
+                              <button type="button" class="btn-declare"><img th:src="@{/images/declare_btn.png}" class="declare-btn"></button>
+                           </div>
+                        </td>
                         </tr>
                         <tr class="hide-table-padding">
                             <td colspan="1">
@@ -61,7 +61,7 @@
 
             <div class="clear">
                 <div class="float-right">
-                    Total <b style="color:red">[[${lectureList.getTotalPages()}]]</b> Pages / <b style="color:red">[[${lectureList.getTotalElements()}]]</b> Elements
+                    Total <b style="color:red">[[${lectureEvaluationList.getTotalPages()}]]</b> Pages / <b style="color:red">[[${lectureEvaluationList.getTotalElements()}]]</b> Elements
                 </div>
             </div>
 
@@ -77,9 +77,9 @@
                             <span class="page-link">&lt;</span>
                         </a>
                     </li>
-                    <li class="page-item" style="cursor:pointer" th:if="${lectureList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,lectureList.getTotalPages()-1)}">
-                        <a th:if="${lectureList.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?page=' + ${num}" th:text="${num+1}"></a>
-                        <a th:unless="${lectureList.getNumber()} == ${num}" class="page-link" th:href="'?page=' + ${num}" th:text="${num+1}"></a>
+                    <li class="page-item" style="cursor:pointer" th:if="${lectureEvaluationList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0, lectureEvaluationList.getTotalPages()-1)}">
+                        <a th:if="${lectureEvaluationList.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${num}" th:text="${num+1}"></a>
+                        <a th:unless="${lectureEvaluationList.getNumber()} == ${num}" class="page-link" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${num}" th:text="${num+1}"></a>
                     </li>
                     <li id="pageNext">
                         <a style="cursor:pointer" th:onClick="|return pageMove('next');|">
@@ -87,10 +87,10 @@
                         </a>
                     </li>
                     <li>
-                        <a th:if="${lectureList.getTotalPages()}>0" th:href=" '?page=' + ${lectureList.getTotalPages()-1}">
+                        <a th:if="${lectureEvaluationList.getTotalPages()}>0" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${lectureEvaluationList.getTotalPages()-1}">
                             <span class="page-link">»</span>
                         </a>
-                        <a th:if="${lectureList.getTotalPages()}==0" th:href="'?page=' + ${lectureList.getTotalPages()}">
+                        <a th:if="${lectureEvaluationList.getTotalPages()}==0" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${lectureEvaluationList.getTotalPages()}">
                             <span class="page-link">»</span>
                         </a>
                     </li>
@@ -126,6 +126,24 @@
     <script>
         var pages = getParameterByName("page");
 
+    	if([[${lectureEvaluationList.getTotalElements()}]] == 0) {
+    		var tr = document.createElement("tr");
+    		var th = document.createElement("th");
+    		
+    		th.colSpan = 4;
+    		th.style.fontSize = "15px";
+    		th.style.textAlign = "center";
+    		th.innerHTML = "검색 결과가 없습니다";
+    		tr.appendChild(th);
+    		$("#tbody").append(tr);
+    	}
+
+        $("#searchBox").val("[[${text}]]");
+        $("#searchBox").focus();
+        $("#searchDate").val("[[${date}]]").prop("selected", true);
+        $("#searchType").val("[[${type}]]").prop("selected", true);
+        $("#searchOption").val("[[${option}]]").prop("selected", true);
+        
         if(pages == "") {
             pages=0;
         }
@@ -145,9 +163,9 @@
             nextOrPrev = (param == "next") ? 1 : -1;
 
             if(pageNum + nextOrPrev < 0) return false;
-            else if(pageNum + nextOrPrev > [[${lectureList.getTotalPages()}]] - 1) return false;
+            else if(pageNum + nextOrPrev > [[${lectureEvaluationList.getTotalPages()}]] - 1) return false;
 
-            location.href = "?page=" + (pageNum + nextOrPrev);
+            location.href = "?text=" + "[[${text}]]"  + "&date=" + "[[${date}]]" + "&option=" + "[[${option}]]" + '&page=' + (pageNum + nextOrPrev);
             return true;
         }
         
@@ -169,7 +187,7 @@
     		chgText = chgText.replace(/ +/g, " ");
     		chgText = chgText.replace(/%/gi, '%25');
     		chgText = chgText.replace(/\\/gi, '%5C');
-    		
+        	
     		var searchData = {
     				sid: "[[${session.studentInfo.getSid()}]]",
     				word: chgText
