--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -4,7 +4,32 @@
 <th:block layout:fragment="title">
 	<title>YU Board View</title>
 </th:block>
-
+<th:block layout:fragment="middle">
+    <div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="reportModalLabel">신고하기</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="form-group">
+                            <textarea class="form-control nonesize" id="content" name="content"  placeholder="내용을 입력하시오"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="float-right" style="margin-bottom:10px; margin-right:10px;">
+                        <button type="button" class="btn-blue" data-toggle ="modal" data-target="#reportModal" data-backdrop ="static">수정하기</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="article">
 	<input type = "hidden" th:id="${board.bno}" name="boardNumber">
 		<div id="article-container">
@@ -44,7 +69,7 @@
                             <!-- 신고 -->
                             <div class="declare-btn-form fl">
                                 <span>신고</span>
-                                <button type="button" class="btn-declare"><img th:src="@{/images/declare_btn.png}" class="declare-btn"></button>
+                                <button type="button" class="btn-declare" data-toggle="modal" data-target="#reportModal" data-backdrop="static"><img th:src="@{/images/declare_btn.png}" class="declare-btn"></button>
                             </div>
                         </div>
                     </div>
