--- a/src/main/resources/templates/lectureevaluation/lectureEvaluationList.html
+++ b/src/main/resources/templates/lectureevaluation/lectureEvaluationList.html
@@ -5,6 +5,33 @@
     <title>YU 강의평 전체보기</title>
 </th:block>
 
+
+<th:block layout:fragment="middle">
+    <div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="reportModalLabel">신고하기</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="form-group">
+                            <textarea class="form-control nonesize" id="content" name="content"  placeholder="내용을 입력하시오"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="float-right" style="margin-bottom:10px; margin-right:10px;">
+                        <button type="button" class="btn-blue" data-toggle ="modal" data-target="#reportModal" data-backdrop ="static">수정하기</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</th:block>
 <th:block layout:fragment="article">
         <div class="container-fluid">
             <div class="col-sm-auto article-header">
@@ -37,7 +64,7 @@
                             <td th:text="${lectureEvaluation.getRegister_date()}"></td>
                             <td>
                                 <div class="declare-btn-form fl">
-                                    <button type="button" class="btn-declare"><img th:src="@{/images/declare_btn.png}" class="declare-btn"></button>
+                                    <button type="button" class="btn-declare" data-toggle = "modal" data-target="#reportModal" data-backdrop="static"><img th:src="@{/images/declare_btn.png}" class="declare-btn"></button>
                                 </div>
                             </td>
                         </tr>
